added and generated openAPI specification for new endpoints
